--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,17 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SpotifyStreamer"
+            android:label="@string/title_activity_spotify_streamer"
+            android:parentActivityName=".Homepage" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.elinsimenstad.showcaseapp.Homepage" />
         </activity>
     </application>
 
